--- a/main.css
+++ b/main.css
@@ -89,24 +89,29 @@
 }
 
 @media (min-width: 40rem) {
-  /*assignment => flex container*/
-  .plan__list { 
+  .plan__list {
     width: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
-  /*assignment => flex container*/
   .plan {
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
     min-width: 13rem;
     max-width: 25rem;
+    justify-content: space-between;
+    height: 28rem;
   }
 
-   /*assignment => z-index & height*/
   .plan--highlighted {
+    z-index: 1;
+    height: 450px;
     box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+    height: 30rem;
   }
 }
 
@@ -146,20 +151,19 @@
 }
 
 @media (min-width: 40rem) {
-  /*assignment*/
   .key-feature {
-    display: inline-block;
-    width: 30%;
     max-width: 25rem;
-    vertical-align: top;
   }
 
-  /*assignment => add .key-feature_list => flex container*/
+
+  .key-feature__list {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
 }
 
-/* h1 {
-    font-family: sans-serif;
-} */
+
 
 .modal {
   position: fixed;
